--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Simple To-Do List</title>
+    <title>Simple ToDo List</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
